# samtools

./: .gitignore  CMakeLists.txt
examples/: CMakeLists.txt  samtool_example.c
src/: CMakeLists.txt  bam.c  bam.h  bam2bcf_indel.c  bam2depth.c  bam_addrprg.c  bam_cat.c  bam_fastq.c  bam_index.c  bam_markdup.c  bam_mate.c  bam_md.c  bam_reheader.c  bam_rmdup.c  bam_rmdupse.c  bam_sort.c  bam_split.c  bam_stat.c  bamshuf.c  bamtk.c  bedcov.c  bedidx.c  bedidx.h  config.h  coverage.c  cut_target.c  dict.c  interface.h  logger.h  phase.c  sam.c  sam.h  sam_view.c  sample.c  samtoolmisc.h  samtools.h  tmp_file.c  tmp_file.h  version.h
test/merge/: test_bam_translate.c  test_rtrans_build.c  test_trans_tbl_init.c
test/split/: test_count_rg.c  test_expand_format_string.c  test_parse_args.c
test/tview/: test_get_rg_sample.c
